--- a/src/lab4_topic/package.xml
+++ b/src/lab4_topic/package.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <description>Examples of minimal publisher/subscriber using rclcpp</description>
-  <maintainer email="yingyw2022@mail.sustech.edu.cn">Yiwen Ying</maintainer>
-  <license>Apache License 2.0</license>
-  <name>lab4</name>
+  <name>lab4_topic</name>
   <version>0.0.0</version>
+  <description>topic guide</description>
+  <maintainer email="12210159@mail.sustech.edu.cn">wendy</maintainer>
+  <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
@@ -14,9 +14,8 @@
 
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
-  
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
-  
 </package>
