--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@ install/*
 log/
 log/*
 *.zip
+*.xz
+src/interbotix_ros_core
+src/interbotix_ros_manipulators
+src/interbotix_ros_toolboxes
+src/iqr_tb4_ros
+src/pan_tilt_ros
+src/realsense-ros
+src/witmotion_ros_driver
